--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+#txtFormElements{
+    width:100%;
+  }
+#primaryColor{
+    background-color:#3f51b5;
+    color:white;
+    margin-top:10px ;
+    margin-right: 5px;
+}
+
+#dangerColor{
+    background-color:#f44336;
+    color:white;
+    margin-top:10px ;
+    margin-right: 5px;
+}
+
+.ng-invalid.ng-touched{
+    border-color: red;
+}
