--- a/src/app/roles/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/app/roles/confirmation-dialog/confirmation-dialog.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title >{{ this.data.Message }}</h1>
+<h2 mat-dialog-title >{{ this.data.Message }}</h2><hr>
 <div mat-dialog-content>
     Are You Sure You want to {{this.data.Message }} ?
 </div>
