--- a/src/app/users/add-edit-user-dialog/add-edit-user-dialog.component.html
+++ b/src/app/users/add-edit-user-dialog/add-edit-user-dialog.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-3">
+<div class="container-fluid mt-3 position-relative">
   <form [formGroup]="userForm">
     <div class="p-2">
       <h1>{{this.data.Action}} USERS</h1><hr>
@@ -100,10 +100,10 @@
           formControlName="countryCode"
           required
           >
-            <mat-option value="option">91</mat-option>
-            <mat-option value="option">93</mat-option>
-            <mat-option value="option">54</mat-option>
-            <mat-option value="option">61</mat-option>
+            <mat-option value="91">91</mat-option>
+            <mat-option value="93">93</mat-option>
+            <mat-option value="54">54</mat-option>
+            <mat-option value="61">61</mat-option>
 
           </mat-select>
         </mat-form-field>
@@ -116,13 +116,12 @@
           formControlName="defaultRoleId"
           required
           >
-            <mat-option value="option">R1</mat-option>
-            <mat-option value="option">R2</mat-option>
-            <mat-option value="option">R3</mat-option>
-            <mat-option value="option">R4</mat-option>
+            <mat-option value="R1">R1</mat-option>
+            <mat-option value="R2">R2</mat-option>
+            <mat-option value="R3">R3</mat-option>
+            <mat-option value="R4">R4</mat-option>
           </mat-select>
         </mat-form-field>
-        
       </div>
     </div>
 
@@ -156,13 +155,77 @@
         </mat-form-field>
       </div>
     </div>
-<hr>
-    <div class="Action"> 
+
+    <div class="row">
+      <div class="col-md-6">
+        <mat-form-field appearance="outline" id="txtFormElements">
+          <mat-label>Select Manager</mat-label>
+          <mat-select 
+          name="currencyCode"
+          formControlName="currencyCode"
+          required
+          >
+            <mat-option value="Manager1">Manager1</mat-option>
+            <mat-option value="Manager2">Manager2</mat-option>
+            <mat-option value="Manager3">Manager3</mat-option>
+            <mat-option value="Manager4">Manager4</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+
+      <div class="col-md-6">
+        <mat-form-field appearance="outline" id="txtFormElements">
+          <mat-label>Select Location Code</mat-label>
+          <mat-select 
+          name="locationCode"
+          formControlName="locationCode"
+          required
+          >
+            <mat-option value="LC1">LC1</mat-option>
+            <mat-option value="LC2">LC2</mat-option>
+            <mat-option value="LC3">LC3</mat-option>
+            <mat-option value="LC4">LC4</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+ 
+    </div>
+
+    <div class="row">
+      <div class="col-md-6">
+        <mat-form-field appearance="outline" id="txtFormElements">
+          <mat-label>Select Location Type</mat-label>
+          <mat-select 
+          name="locationType"
+          formControlName="locationType"
+          required
+          >
+            <mat-option value="Loc1">Loc1</mat-option>
+            <mat-option value="Loc2">Loc2</mat-option>
+            <mat-option value="Loc3">Loc3</mat-option>
+            <mat-option value="Loc4">Loc4</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+
+      <div class="col-md-6">
+        <div style="margin-top:10px;">
+          <mat-radio-group aria-label="Select an option" formControlName="isActive" >
+            <mat-radio-button value="0">Active</mat-radio-button>
+            <mat-radio-button value="1">InActive</mat-radio-button>
+          </mat-radio-group>
+          </div>
+      </div>
+ 
+    </div>
+
+
+    <div class="Action position-absolute bottom-0 end-0" > 
       <button mat-raised-button id="primaryColor" [disabled]="!userForm.valid" (click)="addUpdateRole()" class="float-end p-3">
           <mat-icon>add</mat-icon>
           {{this.data.Action}} And Continue
       </button>
-      <button mat-raised-button id="dangerColor" (click)="closeDialog()" class="float-end p-3">
+      <button mat-raised-button id="warnColor" (click)="closeDialog()" class="float-end p-3">
           <mat-icon>cancel</mat-icon>
           Cancel
       </button>
