--- a/src/app/users/view-user-list/view-user-list.component.html
+++ b/src/app/users/view-user-list/view-user-list.component.html
@@ -1,61 +1,86 @@
-<div class="container mt-5">
-    <div class="card">
+<div class="container mt-2">
+    <div class="card shadow">
         <div class="card-header position-relative">
-            <h1 ><b>Avaliable Users</b></h1>
-            <button mat-raised-button id="primaryColor" (click)="userAction('ADD',null)" class="position-absolute top-0 end-0">
-                <mat-icon>add</mat-icon>
-                Add New User
-            </button>
+            <h2>Users</h2>
+            <div class="button-container position-absolute top-0 end-0">
+                <button mat-raised-button id="warnColor" class="">
+                    <mat-icon>do_not_disturb_on</mat-icon>
+                    Delete User
+                </button>
+                <button mat-raised-button id="primaryColor" (click)="userAction('ADD',null)" class="">
+                    <mat-icon>add_circle</mat-icon>
+                    Add New User
+                </button>
+            </div>
         </div>
-        <div class="card-body">
-            <div class="mat-elevation-z8">
-                <table mat-table [dataSource]="dataSource">
+        <div class="card-body ">
+            <div class="mat">
+                <table mat-table [dataSource]="dataSource" >
                 <!-- Id Column -->
-                <ng-container matColumnDef="id">
+                <!-- <ng-container matColumnDef="id">
                     <th mat-header-cell *matHeaderCellDef> Id. </th>
                     <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-                </ng-container>
+                </ng-container> -->
             
                 <!-- Name Role -->
-                <ng-container matColumnDef="roleName">
-                    <th mat-header-cell *matHeaderCellDef> Role Name </th>
-                    <td mat-cell *matCellDef="let element"> {{element.roleName}} </td>
+                <ng-container matColumnDef="userName">
+                    <th mat-header-cell *matHeaderCellDef style="width: 15%;"> User Name </th>
+                    <td mat-cell *matCellDef="let element" style="width: 15%;"> {{element.userName}} </td>
                 </ng-container>
             
                 <!-- Description Column -->
-                <ng-container matColumnDef="description">
-                    <th mat-header-cell *matHeaderCellDef> Description </th>
-                    <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+                <ng-container matColumnDef="firstName" >
+                    <th mat-header-cell *matHeaderCellDef style="width:10%;"> First Name </th>
+                    <td mat-cell *matCellDef="let element" style="width:10%;"> {{element.firstName}}</td>
+                </ng-container>
+
+                 <!-- Description Column -->
+                 <ng-container matColumnDef="lastName">
+                    <th mat-header-cell *matHeaderCellDef style="width:10%;"> Last Name </th>
+                    <td mat-cell *matCellDef="let element" style="width:10%;"> {{element.lastName}}</td>
                 </ng-container>
             
+                 <!-- Created Column -->
+                 <ng-container matColumnDef="email">
+                    <th mat-header-cell *matHeaderCellDef style="width:15%;"> Email </th>
+                    <td mat-cell *matCellDef="let element" style="width:15%;"> {{element.email}} </td>
+                </ng-container>
+
+                 <!-- Created Column -->
+                 <ng-container matColumnDef="phone" >
+                    <th mat-header-cell *matHeaderCellDef style="width:10%;"> Phone </th>
+                    <td mat-cell *matCellDef="let element" style="width:10%;"> {{element.phone}} </td>
+                </ng-container>
+
                 <!-- Created Column -->
-                <ng-container matColumnDef="created_At">
-                    <th mat-header-cell *matHeaderCellDef> Created On </th>
-                    <td mat-cell *matCellDef="let element"> {{element.created_At | date}} </td>
+                <ng-container matColumnDef="manager">
+                    <th mat-header-cell *matHeaderCellDef style="width:10%;"> Manager </th>
+                    <td mat-cell *matCellDef="let element" style="width:10%;"> {{element.manager}} </td>
                 </ng-container>
 
-                <!-- updated_At Column -->
-                <ng-container matColumnDef="updated_At">
-                    <th mat-header-cell *matHeaderCellDef> Updated On </th>
-                    <td mat-cell *matCellDef="let element"> {{element.updated_At | date}} </td>
+                 <!-- Created Column -->
+                 <ng-container matColumnDef="countryCode" >
+                    <th mat-header-cell *matHeaderCellDef style="width:8%;"> Country Code </th>
+                    <td mat-cell *matCellDef="let element" style="width:8%;"> {{element.countryCode}} </td>
                 </ng-container>
 
-                <!-- isActive Column -->
-                <ng-container matColumnDef="isActive">
-                    <th mat-header-cell *matHeaderCellDef> Status </th>
-                    <td mat-cell *matCellDef="let element"> {{element.isActive}} </td>
+                <!-- locationCode Column -->
+                <ng-container matColumnDef="locationCode" >
+                    <th mat-header-cell *matHeaderCellDef style="width:8%;"> location Code </th>
+                    <td mat-cell *matCellDef="let element" style="width:8%;"> {{element.locationCode}} </td>
                 </ng-container>
+               
 
                 <ng-container matColumnDef="Action">
                     <th mat-header-cell *matHeaderCellDef> Action </th>
-                    <td mat-cell *matCellDef="let element">
-                        <mat-icon color="primary" (click)="userAction('EDIT',element)">edit</mat-icon>
-                        <mat-icon color="warn" (click)="deleteUser(element.id)">delete</mat-icon>
+                    <td mat-cell *matCellDef="let element" style="width:15%;">
+                        <mat-icon color="" style="color:black;" (click)="userAction('EDIT',element)">edit</mat-icon>
+                        <mat-icon color="" style="color:black;" (click)="deleteUser(element.id)">delete</mat-icon>
                     </td>
                 </ng-container>
             
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns" id="custom-table"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;" id="custom-table"></tr>
                 </table>
             
                 <mat-paginator [pageSizeOptions]="[5, 10, 20]"
