--- a/src/styles.css
+++ b/src/styles.css
@@ -5,16 +5,17 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 #txtFormElements{
     width:100%;
+    line-height:5px;
   }
 #primaryColor{
-    background-color:#3f51b5;
+    background-color:#1D4F91;
     color:white;
     margin-top:10px ;
     margin-right: 5px;
 }
 
-#dangerColor{
-    background-color:#f44336;
+#warnColor{
+    background-color:#FF7F32;
     color:white;
     margin-top:10px ;
     margin-right: 5px;
@@ -23,3 +24,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .ng-invalid.ng-touched{
     border-color: red;
 }
+
+#custom-table{
+    border-bottom: 2px solid #FF7F32 !important; /* Change 'blue' to the desired color */
+  }
+
