--- a/src/app/roles/view-roles-list/view-roles-list.component.html
+++ b/src/app/roles/view-roles-list/view-roles-list.component.html
@@ -5,11 +5,11 @@
             <div class="button-container position-absolute top-0 end-0">
                 <button mat-raised-button id="warnColor">
                     <mat-icon>do_not_disturb_on</mat-icon>
-                    Delete Role
+                    Delete
                 </button>
                 <button mat-raised-button id="primaryColor" (click)="roleAction('ADD',null)" class="">
                     <mat-icon>add_circle</mat-icon>
-                    Add New Role
+                    Add New
                 </button>
             </div>
         </div>
@@ -56,5 +56,3 @@
     
 </div>
 
-
-<
