--- a/src/app/users/add-edit-user-dialog/add-edit-user-dialog.component.html
+++ b/src/app/users/add-edit-user-dialog/add-edit-user-dialog.component.html
@@ -219,8 +219,8 @@
  
     </div>
 
-
-    <div class="Action position-absolute bottom-0 end-0" > 
+<hr>
+    <div class="Action" > 
       <button mat-raised-button id="primaryColor" [disabled]="!userForm.valid" (click)="addUpdateRole()" class="float-end p-3">
           <mat-icon>add</mat-icon>
           {{this.data.Action}} And Continue
