--- a/src/app/users/view-user-list/view-user-list.component.html
+++ b/src/app/users/view-user-list/view-user-list.component.html
@@ -5,11 +5,11 @@
             <div class="button-container position-absolute top-0 end-0">
                 <button mat-raised-button id="warnColor" class="">
                     <mat-icon>do_not_disturb_on</mat-icon>
-                    Delete User
+                    Delete
                 </button>
                 <button mat-raised-button id="primaryColor" (click)="userAction('ADD',null)" class="">
                     <mat-icon>add_circle</mat-icon>
-                    Add New User
+                    Add New
                 </button>
             </div>
         </div>
