--- a/src/app/customers/view-customers/view-customers.component.html
+++ b/src/app/customers/view-customers/view-customers.component.html
@@ -5,11 +5,11 @@
             <div class="button-container position-absolute top-0 end-0">
                 <button mat-raised-button id="warnColor" class="">
                     <mat-icon>do_not_disturb_on</mat-icon>
-                    Delete User
+                    Delete
                 </button>
                 <button mat-raised-button id="primaryColor" (click)="customerAction('ADD',null)" class="">
-                    <mat-icon>add</mat-icon>
-                    Add New Customers
+                    <mat-icon>add_circle</mat-icon>
+                    Add New
                 </button>
             </div>
         </div>
