--- a/src/app/layout/side-nav/side-nav.component.css
+++ b/src/app/layout/side-nav/side-nav.component.css
@@ -1,12 +1,12 @@
-.example-container {
+   /*.example-container {
     width: 100%;
     height: 100%;
-    border: 1px solid #555;
+    
   }
-  .mat-drawer{
-    width:200px
-  }
-
+ .mat-drawer{
+    width:250px
+  } */
+/* /*
   .mat-toolbar {
     min-height: 64px;
   }
@@ -16,7 +16,7 @@
   }
 
   .custom-drawer {
-    width: 200px;
+    width: 230px;
     background-color: #002855;
     color: white;
   }
@@ -52,7 +52,7 @@
   .active-link {
     border-right:solid 3px orangered;
     background-color: rgba(255,255,255,0.5);
-  }
+  } */
 
 
   /* Hide sidebar and show only icons on small screens */
@@ -76,7 +76,61 @@
   .example-container.sidebar-open .mat-icon-button {
     justify-content: center;
   }
+} 
+
+
+mat-sidenav-container{
+  height:100%;
 }
+
+
+#listItems{
+  padding:10px;
+  margin-top:5px;
+}
+#listItems span{
+  color:white;
+  font-size:medium;
+  margin-left:5px;
+  
+}
+#listItems mat-icon{
+  color:white;
+  margin-top:3px;
+  
+}
+#listItems:hover{
+  border-right:solid 3px orangered;
+  cursor: pointer;
+  background-color: rgba(255,255,255,0.5);
+  color:black
+}
+
+.active-link {
+  border-right:solid 3px orangered;
+  background-color: rgba(255,255,255,0.5);
+} 
+
+mat-sidenav {
+  background-color: #002855;
+  color: white;
+}
+
+ .chevron-button{
+      transition:500ms ease-in-out;
+      transform: rotate(0deg);
+      right:0;
+      float:right;
+      position:absolute;
+      color:white;
+    }
+
+    .chevron-button.rotated{
+      transform:rotate(180deg);
+    }
+  
+
+
 
 
 
